# webditor

./: .gitignore  .pnp.cjs  CLAUDE.md  LICENSE.md  README.md  eslint.config.mjs  eudplib-0.80.0-cp310-abi3-macosx_11_0_arm64.whl  package.json  pnpm-lock.yaml
backend/: Dockerfile  README.md  hello12345.scx  main.py  pyproject.toml
backend/app/: .gitignore  main.py
backend/app/api/v1/endpoints/: map.py  tileset.py  user.py
backend/app/core/: __init__.py  w_logging.py
backend/app/core/firebase/: auth.py  config.py  firestore.py  storage.py
backend/app/models/: __init__.py  asset.py  cost.py  entity.py  entity_node.py  flingy.py  images.py  location.py  mask.py  object.py  order.py  player.py  portrait.py  project.py  rawtrigger.py  scbase.py  spatial.py  sprite.py  string.py  tech.py  terrain.py  tree.py  unit.py  validation.py  weapon.py  wobject.py
backend/app/models/components/: component.py  transform.py  weapon.py  weapon_component.py
backend/app/models/definitions/: __init__.py  definition.py  flingy.py  image.py  order.py  portrait.py  sprite.py  tech.py  unit.py  unit_definition.py  weapon.py  weapon_definition.py
backend/app/models/entities/: entity.py  location.py  mask.py  sprite.py  tile.py  unit.py
backend/app/models/structs/: cost.py  required_and_provided.py  spatial.py  stat.py  struct.py  unit_structs.py
backend/app/services/: hex_validator.py  io.py  map_processor.py  merger.py
backend/app/services/bridge/: transformer.py
backend/app/services/mapdata/: chk.py  io.py  loadmap.py
backend/app/services/rawdata/: chk.py  converter.py  dat.py  original.scx
backend/app/services/rawdata/dat/: scdat.py
backend/app/services/scdata/: scterrain.py
backend/app/services/utils/: player.py  reverse.py  tileset.py
backend/app/types/: chk_types.py  dat_types.py  race.py  spatial.py  tileset.py
backend/example/: 4_units.scx  A_Tale_of_Two_Cities.scx  build_map.py  devouring_ones.scx  goe.scx  hello12345.scx  merge.py  transform.py  various_units.scx
backend/mapdata/: chk.py  unit.py  weapon.py
backend/tests/maps/: test_load.py
frontend/: README.md  (+5 more)
preprocess/: build.py  pyproject.toml  rawdata.py  schema.py
preprocess/graphics/: main.py  scanim.py  scdds.py  scgraphic.py  types.py
preprocess/preprocess/: schema_generator.py
preprocess/preprocess/graphics/: README.md  main.py  packer.py  scanim.py
preprocess/preprocess/terrain/: main.py  scterrain.py  terrain_analyzer.py
preprocess/terrain/: main.py  scterrain.py  terrain_analyzer.py
wengine/: pyproject.toml
wengine/src/wengine/: main.py
wengine/src/wengine/components/: component.py  transform.py
wengine/src/wengine/entities/: entity.py  location.py  unit.py
wengine/src/wengine/objects/: wobject.py
(+196 files in other folders)
