[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"

dependencies = [
  "fastapi[standard] >=0.115.11",
  "firebase-admin >=6.7.0",
  "rich >=14.0.0",
  "eudplib",
  "wengine",
]

[tool.uv.sources]
eudplib = { path = "../eudplib-0.80.0-cp310-abi3-macosx_11_0_arm64.whl", marker = "platform_system == 'Linux'" }
wengine = { path = "../wengine", editable = true }

[project.optional-dependencies]
dev = [
  "datamodel-code-generator >=0.28.5"
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
indent-width = 2
